Kleopatra: Always show the verfication results of all signatures even if some signatures are bad
Closed, ResolvedPublic

Assigned To
Authored By
ikloecker
Aug 26 2024, 4:59 PM
Tags

Description

If a detached signature file contains multiple signatures and the first signature is bad then Kleopatra only shows the verification result of the first signature (see T6870). Kleopatra should always show the verification results for all signatures.

Event Timeline

ikloecker changed the task status from Open to Testing.Aug 26 2024, 5:02 PM
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Fixed.

Backported the changes in Kleopatra for VSD 3.3.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Oct 1 2024, 3:55 PM
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Nov 26 2024, 3:46 PM

Gpg4win-Beta-94:
Looks good, here the file was changed after the first two signed it:

We could discuss how to make this a bit more easy to parse visually, but that would be a new task.

In T7273#195063, @ebo wrote:

We could discuss how to make this a bit more easy to parse visually, but that would be a new task.

I think that's task T6869: Kleopatra: Improve verification results messages (esp. for invalid signature and multiple signatures).

TobiasFella moved this task from QA to vsd-3.3.0 on the vsd33 board.
TobiasFella edited projects, added vsd33 (vsd-3.3.0); removed vsd33.