Enable checking of all data signatures

By default, gpg stops signature checking after the first bad signature.

GnuPG-bug-id: 7273
(cherry picked from commit 59421b063672d70e408ae0358819bee979f5f4cc)